--- a/index.html
+++ b/index.html
@@ -2,14 +2,15 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
+        <link rel="stylesheet" href="styles.css">
         <title>Odin Recipes</title>
     </head>
     <body>
         <h1>Odin Recipes</h1>
         <ul>
-        <li><a href="./recipes/cookies.html" target="_blank">Cookies</a></li>
-        <li><a href="./recipes/lasagna.html" target="_blank">Lasagna</a></li>
-        <li><a href="./recipes/mac_and_cheese.html" target="_blank">Mac and Cheese</a></li>
+         <li class="recipe"><a href="./recipes/cookies.html" >Cookies</a></li>
+         <li class="recipe"><a href="./recipes/lasagna.html" >Lasagna</a></li>
+         <li class="recipe"><a href="./recipes/mac_and_cheese.html" >Mac and Cheese</a></li>
         </ul>
     </body>
 </html>
