--- a/index.html
+++ b/index.html
@@ -6,11 +6,13 @@
         <title>Odin Recipes</title>
     </head>
     <body>
-        <h1>Odin Recipes</h1>
-        <ul>
-         <li class="recipe"><a href="./recipes/cookies.html" >Cookies</a></li>
-         <li class="recipe"><a href="./recipes/lasagna.html" >Lasagna</a></li>
-         <li class="recipe"><a href="./recipes/mac_and_cheese.html" >Mac and Cheese</a></li>
-        </ul>
+        <div class="card">
+            <h1>Odin Recipes</h1>
+            <ul>
+             <li class="recipe"><a href="./recipes/cookies.html" >Cookies</a></li>
+             <li class="recipe"><a href="./recipes/lasagna.html" >Lasagna</a></li>
+             <li class="recipe"><a href="./recipes/mac_and_cheese.html" >Mac and Cheese</a></li>
+            </ul>
+        </div>
     </body>
 </html>
